--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -18,18 +18,19 @@
         border-radius: 3px;
         display: table;
         overflow: hidden;
-
+        top:50%;
         opacity: 0;
         transform: translate(-50%, -50%) scale(.25);
         transition: all .5s .2s;
     }
     &__left {
-        width: 33.333333%;
+        width: 20%;
+        vertical-align: middle;
         display: table-cell;
     }
 
     &__right {
-        width: 66.666667%;
+        width: 80%;
         display: table-cell;
         vertical-align: middle;
         padding: 3rem 5rem;
