--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -94,177 +94,177 @@
         &--Fool {
             background-image: linear-gradient(to right bottom,
                 $color-primary-light, $color-primary-dark),
-                url('/assets/img/Fool.jpg');
+                url('/assets/img/Majors/Fool.jpg');
             &--back {
-                background-image: url('/assets/img/Fool.jpg');
+                background-image: url('/assets/img/Majors/Fool.jpg');
             }
         }
         &--Magician {
             background-image: linear-gradient(to right bottom,
                 $color-four-light, $color-secondary-dark),
-                url('/assets/img/Magician.jpg');
+                url('/assets/img/Majors/Magician.jpg');
             &--back {
-                background-image: url('/assets/img/Magician.jpg');
+                background-image: url('/assets/img/Majors/Magician.jpg');
             }
         }
         &--Priestess {
             background-image: linear-gradient(to right bottom,
                 $color-four-light, $color-tertiary-dark),
-                url('/assets/img/Priestess.jpg');
+                url('/assets/img/Majors/Priestess.jpg');
             &--back {
-                background-image: url('/assets/img/Priestess.jpg');
+                background-image: url('/assets/img/Majors/Priestess.jpg');
             }
         }
         &--Empress {
             background-image: linear-gradient(to right bottom,
                 $color-four-light, $color-four-dark),
-                url('/assets/img/Empress.jpg');
+                url('/assets/img/Majors/Empress.jpg');
             &--back {
-                background-image: url('/assets/img/Empress.jpg');
+                background-image: url('/assets/img/Majors/Empress.jpg');
             }
         }
         &--Emperor {
             background-image: linear-gradient(to right bottom,
                 $color-primary-light, $color-primary-dark),
-                url('/assets/img/Emperor.jpg');
+                url('/assets/img/Majors/Emperor.jpg');
             &--back {
-                background-image: url('/assets/img/Emperor.jpg');
+                background-image: url('/assets/img/Majors/Emperor.jpg');
             }
         }
         &--Hierophant {
             background-image: linear-gradient(to right bottom,
                 $color-secondary-light, $color-secondary-dark),
-                url('/assets/img/Hierophant.jpg');
+                url('/assets/img/Majors/Hierophant.jpg');
             &--back {
-                background-image: url('/assets/img/Hierophant.jpg');
+                background-image: url('/assets/img/Majors/Hierophant.jpg');
             }
         }
         &--Lovers {
             background-image: linear-gradient(to right bottom,
                 $color-tertiary-light, $color-tertiary-dark),
-                url('/assets/img/Lovers.jpg');
+                url('/assets/img/Majors/Lovers.jpg');
             &--back {
-                background-image: url('/assets/img/Lovers.jpg');
+                background-image: url('/assets/img/Majors/Lovers.jpg');
             }
         }
         &--Chariot {
             background-image: linear-gradient(to right bottom,
                 $color-four-light, $color-four-dark),
-                url('/assets/img/Chariot.jpg');
+                url('/assets/img/Majors/Chariot.jpg');
             &--back {
-                background-image: url('/assets/img/Chariot.jpg');
+                background-image: url('/assets/img/Majors/Chariot.jpg');
             }
         }
         &--Strength {
             background-image: linear-gradient(to right bottom,
                 $color-primary-light, $color-primary-dark),
-                url('/assets/img/Strength.jpg');
+                url('/assets/img/Majors/Strength.jpg');
             &--back {
-                background-image: url('/assets/img/Strength.jpg');
+                background-image: url('/assets/img/Majors/Strength.jpg');
             }
         }
         &--Hermit {
             background-image: linear-gradient(to right bottom,
                 $color-secondary-light, $color-secondary-dark),
-                url('/assets/img/Hermit.jpg');
+                url('/assets/img/Majors/Hermit.jpg');
             &--back {
-                background-image: url('/assets/img/Hermit.jpg');
+                background-image: url('/assets/img/Majors/Hermit.jpg');
             }
         }
         &--Wheel_of_Fortune {
             background-image: linear-gradient(to right bottom,
                 $color-tertiary-light, $color-tertiary-dark),
-                url('/assets/img/Wheel_of_Fortune.jpg');
+                url('/assets/img/Majors/Wheel_of_Fortune.jpg');
             &--back {
-                background-image: url('/assets/img/Wheel_of_Fortune.jpg');
+                background-image: url('/assets/img/Majors/Wheel_of_Fortune.jpg');
             }
         }
         &--Justice{
             background-image: linear-gradient(to right bottom,
                 $color-four-light, $color-four-dark),
-                url('/assets/img/Justice.jpg');
+                url('/assets/img/Majors/Justice.jpg');
             &--back {
-                background-image: url('/assets/img/Justice.jpg');
+                background-image: url('/assets/img/Majors/Justice.jpg');
             }
         }
         &--HangedMan {
             background-image: linear-gradient(to right bottom,
                 $color-primary-light, $color-primary-dark),
-                url('/assets/img/HangedMan.jpg');
+                url('/assets/img/Majors/HangedMan.jpg');
             &--back {
-                background-image: url('/assets/img/HangedMan.jpg');
+                background-image: url('/assets/img/Majors/HangedMan.jpg');
             }
         }
         &--Death {
             background-image: linear-gradient(to right bottom,
                 $color-secondary-light, $color-secondary-dark),
-                url('/assets/img/Death.jpg');
+                url('/assets/img/Majors/Death.jpg');
             &--back {
-                background-image: url('/assets/img/Death.jpg');
+                background-image: url('/assets/img/Majors/Death.jpg');
             }
         }
         &--Temperance {
             background-image: linear-gradient(to right bottom,
                 $color-tertiary-light, $color-tertiary-dark),
-                url('/assets/img/Temperance.jpg');
+                url('/assets/img/Majors/Temperance.jpg');
             &--back {
-                background-image: url('/assets/img/Temperance.jpg');
+                background-image: url('/assets/img/Majors/Temperance.jpg');
             }
         }
         &--Devil{
             background-image: linear-gradient(to right bottom,
                 $color-four-light, $color-four-dark),
-                url('/assets/img/Devil.jpg');
+                url('/assets/img/Majors/Devil.jpg');
             &--back {
-                background-image: url('/assets/img/Devil.jpg');
+                background-image: url('/assets/img/Majors/Devil.jpg');
             }
         }
         &--Tower {
             background-image: linear-gradient(to right bottom,
                 $color-primary-light, $color-primary-dark),
-                url('/assets/img/Tower.jpg');
+                url('/assets/img/Majors/Tower.jpg');
             &--back {
-                background-image: url('/assets/img/Tower.jpg');
+                background-image: url('/assets/img/Majors/Tower.jpg');
             }
         }
         &--Star {
             background-image: linear-gradient(to right bottom,
                 $color-secondary-light, $color-secondary-dark),
-                url('/assets/img/Star.jpg');
+                url('/assets/img/Majors/Star.jpg');
             &--back {
-                background-image: url('/assets/img/Star.jpg');
+                background-image: url('/assets/img/Majors/Star.jpg');
             }
         }
         &--Moon {
             background-image: linear-gradient(to right bottom,
                 $color-tertiary-light, $color-tertiary-dark),
-                url('/assets/img/Moon.jpg');
+                url('/assets/img/Majors/Moon.jpg');
             &--back {
-                background-image: url('/assets/img/Moon.jpg');
+                background-image: url('/assets/img/Majors/Moon.jpg');
             }
         }
         &--Sun{
             background-image: linear-gradient(to right bottom,
                 $color-four-light, $color-four-dark),
-                url('/assets/img/Sun.jpg');
+                url('/assets/img/Majors/Sun.jpg');
             &--back {
-                background-image: url('/assets/img/Sun.jpg');
+                background-image: url('/assets/img/Majors/Sun.jpg');
             }
         }
         &--Judgement {
             background-image: linear-gradient(to right bottom,
                 $color-primary-light, $color-primary-dark),
-                url('/assets/img/Judgement.jpg');
+                url('/assets/img/Majors/Judgement.jpg');
             &--back {
-                background-image: url('/assets/img/Judgement.jpg');
+                background-image: url('/assets/img/Majors/Judgement.jpg');
             }
         }
         &--World {
             background-image: linear-gradient(to right bottom,
                 $color-secondary-light, $color-secondary-dark),
-                url('/assets/img/World.jpg');
+                url('/assets/img/Majors/World.jpg');
             &--back {
-                background-image: url('/assets/img/World.jpg');
+                background-image: url('/assets/img/Majors/World.jpg');
             }
         }
         &--AceWands {
