--- a/public/css/style.css
+++ b/public/css/style.css
@@ -670,7 +670,7 @@ body {
     box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
     border-radius: 3px;
     display: table;
-    overflow: hidden;
+    overflow: scroll;
     top: 50%;
     opacity: 0;
     transform: translate(-50%, -50%) scale(0.25);
@@ -688,7 +688,7 @@ body {
     display: block;
     width: 100%; }
   .popup__text {
-    font-size: 1.4rem;
+    font-size: 2rem;
     margin-bottom: 4rem;
     -moz-column-count: 2;
     -moz-column-gap: 4rem;
