--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -17,7 +17,8 @@
         box-shadow: 0 2rem 4rem rgba($color-black, .2);
         border-radius: 3px;
         display: table;
-        overflow: hidden;
+        //overflow: hidden;
+        overflow: scroll;
         top:50%;
         opacity: 0;
         transform: translate(-50%, -50%) scale(.25);
@@ -40,7 +41,7 @@
         width: 100%;
     }
     &__text {
-        font-size: 1.4rem;
+        font-size: 2rem;
         margin-bottom: 4rem;
 
         -moz-column-count: 2;
