add 2 btn for login and sign up

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,6 +13,9 @@
 @import "components/card";
 @import "components/feature-box";
 @import "components/popup";
+@import "components/auth";
+@import "components/input";
+@import "components/logo";
 
 @import "layout/header";
 @import "layout/grid";
