--- a/public/css/style.css
+++ b/public/css/style.css
@@ -719,6 +719,51 @@ body {
   .popup__close:hover {
     color: #d11aff; }
 
+.auth-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 25%;
+  text-align: center;
+  background-color: #fff; }
+
+.auth-base {
+  padding-left: 20%;
+  padding-right: 20%;
+  height: 50vh;
+  text-align: center; }
+
+.auth-input {
+  width: 100%;
+  border: none;
+  padding: 15px;
+  border-bottom: 1px solid #ddd;
+  font-size: 2rem; }
+
+.auth-btn {
+  text-transform: uppercase;
+  border-radius: 5px;
+  border: none;
+  outline: none;
+  color: white;
+  margin: 1.5rem 0 1rem;
+  width: 100%;
+  height: 4rem;
+  background: #ffb900;
+  font-size: 2rem; }
+  .auth-btn:hover {
+    box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.15);
+    background: #ff7730; }
+
+.auth-left-text {
+  text-align: left;
+  display: block;
+  font-size: 2rem; }
+
+.auth-pull-right {
+  float: right; }
+
 .header {
   height: 95vh;
   background-image: linear-gradient(to right bottom, rgba(245, 204, 255, 0.3), rgba(143, 0, 179, 0.3)), url("/assets/img/main/cover.jpg");
@@ -730,6 +775,12 @@ body {
     position: absolute;
     top: 40%;
     left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center; }
+  .header__member {
+    position: absolute;
+    top: 5%;
+    right: 0%;
     transform: translate(-50%, -50%);
     text-align: center; }
 
