--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -3,6 +3,7 @@ $color-primary: #d11aff;
 $color-primary-light: #f5ccff;
 $color-primary-dark: #8f00b3;
 
+$color-secondary-super-light: #fbf2db;
 $color-secondary-light: #ffb900;
 $color-secondary-dark: #ff7730;
 
