--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -17,4 +17,11 @@
         transform: translate(-50%, -50%);
         text-align: center;
     }
+    &__member {
+        position: absolute;
+        top: 5%;
+        right: 0%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+    }
 }
